# twitter_clone

./: pyproject.toml
core/: urls.py
core/migrations/: 0001_initial.py
core/models/: follow.py  like.py  post.py
core/serializers/: __init__.py  follow_serializer.py  like_serializer.py  post_serializer.py  profile_serializer.py  register_serializer.py
core/viewsets/: __init__.py  follow_viewset.py  like_viewset.py  login_view.py  post_viewset.py  profile_view.py  profile_viewset.py  register_view.py
twitter_clone/: settings.py  urls.py
